--- a/src/main/webapp/pages/productlist.html
+++ b/src/main/webapp/pages/productlist.html
@@ -272,7 +272,7 @@
 
     <div class="mainbox" style="text-align:center;padding:10px;height:50px">
         <ul id="pagination-digg">
-            <li class="previous-off">&laquo;Previous</li>
+            <li class="previous-off">&laquo;上一页</li>
             <li class="active">1</li>
             <li><a href="?page=2">2</a></li>
             <li><a href="?page=3">3</a></li>
@@ -280,7 +280,7 @@
             <li><a href="?page=5">5</a></li>
             <li><a href="?page=6">6</a></li>
             <li><a href="?page=7">7</a></li>
-            <li class="next"><a href="?page=8">Next &raquo;</a></li>
+            <li class="next"><a href="?page=8">下一页 &raquo;</a></li>
         </ul>
     </div>
 
