--- a/src/main/webapp/pages/supply.html
+++ b/src/main/webapp/pages/supply.html
@@ -3,14 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
-    <link href="../css/style.css" rel="stylesheet" />
-    <script src="../scripts/jquery.js"></script>
-    <script src="../scripts/comm.js"></script>
-    <link rel="stylesheet" type="text/css" href="../scripts/jquery-easyui-1.3.6/themes/default/easyui.css">
-    <link rel="stylesheet" type="text/css" href="../scripts/jquery-easyui-1.3.6/themes/icon.css">
-    <script type="text/javascript" src="../scripts/jquery-easyui-1.3.6/jquery.easyui.min.js"></script>
-    <script type="text/javascript" src="../scripts/jquery-easyui-1.3.6/easyui-lang-zh_CN.js"></script>
-    <script type="text/javascript" src="../scripts/jquery-easyui-1.3.6/validate/easyui_validate.js"></script>
+    <link href="csi/css/style.css" rel="stylesheet" />
+    <script src="csi/script/jquery.js"></script>
+    <script src="csi/script/comm.js"></script>
     <style>
     ul.pic_list{width:790px;height:300px;position:relative}
     ul.pic_list li{float:left;width:100%;height:300px;position:absolute;top:0px;left:0px}
@@ -150,19 +145,16 @@
               
             </div>
 
-            <table class="easyui-datagrid" width="100%"  border="1" cellspacing="0" cellpadding="0"
-             data-options="url:'datagrid_data.json',fitColumns:true,singleSelect:true">
-               <thead>
+            <table width="100%" border="1" cellspacing="0" cellpadding="0">
                 <tr>
                     <th style="width:45px"> <input type="checkbox" name="name" value=" " /> </th>
-                    <th data-options="field:'code',width:100" style="width:245px">商品信息</th>
+                    <th style="width:245px">商品信息</th>
                     <th>单价</th>
                     <th>数量</th>
                     <th>金额 (元)</th>
                     <th style="width:100px;">操作</th>
+
                 </tr>
-               </thead>
-              <!--  <tbody>
                 <tr>
                     <td ><input type="checkbox" name="name" value=" " /></td>
                     <td > <a href="#" class="link">铁三角CKR5</a> </td>
@@ -171,7 +163,6 @@
                     <td class="alir">1535.22</td>
                     <td> <a href="cdd" class="btn2">删除</a> </td>
                 </tr>
-               </tbody>  -->
             </table>
             <div class="total">    <a href="cdd" class="btn3">放入我的货架</a>   </div>
 
