--- a/src/main/webapp/pages/_myproduct.html
+++ b/src/main/webapp/pages/_myproduct.html
@@ -3,9 +3,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
-    <link href="csi/css/style.css" rel="stylesheet" />
-    <script src="csi/script/jquery.js"></script>
-    <script src="csi/script/comm.js"></script>
+        <link href="../css/style.css" rel="stylesheet" />
+    <script src="../scripts/jquery.js"></script>
+    <script src="../scripts/comm.js"></script>
     <style>
     ul.pic_list{width:790px;height:300px;position:relative}
     ul.pic_list li{float:left;width:100%;height:300px;position:absolute;top:0px;left:0px}
@@ -126,7 +126,24 @@
     <div class="mainbox usermain clearfix">
         <div class="user-right">
 
-            <a href="sdf" class="btn1">移除</a>
+            <div class="myprosearch">
+                商品分类 
+                <select>
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="opel">Opel</option>
+                    <option value="audi">Audi</option>
+                </select>
+                品牌
+                <select>
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="opel">Opel</option>
+                    <option value="audi">Audi</option>
+                </select>
+                <input type="button" name="name" value="搜索" class="btn4" />
+              
+            </div>
 
             <table width="100%" border="1" cellspacing="0" cellpadding="0">
                 <tr>
@@ -147,7 +164,7 @@
                     <td> <a href="cdd" class="btn2">删除</a> </td>
                 </tr>
             </table>
-            <div class="total">    <a href="cdd" class="btn3">合计</a>  <span>合计（不含运费）：580</span> </div>
+            <div class="total">    <a href="cdd" class="btn3">放入我的货架</a>   </div>
 
         </div>
 
