--- a/src/main/webapp/pages/foot.html
+++ b/src/main/webapp/pages/foot.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="footcontent mainbox clearfix">
-        <ul class="icon1">
+        <!-- <ul class="icon1">
             <li class="title">购物指南</li>
             <li>购物流程</li>
             <li>会员介绍</li>
@@ -49,7 +49,7 @@
             <li>常用问题</li>
             <li>大家电</li>
             <li>联系客服</li>
-        </ul>
+        </ul> -->
     </div>
 
     <div class="linkme mainbox">
