修改相应的CSS

--- a/src/main/webapp/pages/_productlist.html
+++ b/src/main/webapp/pages/_productlist.html
@@ -277,6 +277,7 @@
                 <div class="p-price" sku="1123632">
                     <span>市场价：</span>  <strong class="J-p-1123632">￥149.00</strong>
                     <span>平台价：</span>  <strong class="J-p-1123632">￥149.00</strong>
+                    <span>订购数量：<input type="text" class="p-price-num" name="name" value=" " /> </span>
                 </div>
             </li>
 
