新增产品列表购物车功能

--- a/src/main/webapp/pages/_allorder.html
+++ b/src/main/webapp/pages/_allorder.html
@@ -9,7 +9,7 @@
     <link href="../scripts/jquery-easyui-1.4.1/themes/icon.css" rel="stylesheet" />
     <link href="../scripts/jquery-easyui-1.4.1/themes/bootstrap/easyui.css" rel="stylesheet" />
     <script src="../scripts/jquery-easyui-1.4.1/jquery.easyui.min.js"></script>
-    <script src="http://www.jeasyui.com/easyui/datagrid-groupview.js"></script>
+    <script src="../scripts/jquery-easyui-1.4.1/datagrid-groupview.js"></script>
     <style>
     ul.pic_list{width:790px;height:300px;position:relative}
     ul.pic_list li{float:left;width:100%;height:300px;position:absolute;top:0px;left:0px}
