--- a/src/main/webapp/pages/_productlist.html
+++ b/src/main/webapp/pages/_productlist.html
@@ -6,6 +6,9 @@
         <link href="../css/style.css" rel="stylesheet" />
     <script src="../scripts/jquery.js"></script>
     <script src="../scripts/comm.js"></script>
+    <link href="../scripts/jquery-easyui-1.4.1/themes/icon.css" rel="stylesheet" />
+    <link href="../scripts/jquery-easyui-1.4.1/themes/bootstrap/easyui.css" rel="stylesheet" />
+    <script src="../scripts/jquery-easyui-1.4.1/jquery.easyui.min.js"></script>
     <style>
     ul.pic_list{width:790px;height:300px;position:relative}
     ul.pic_list li{float:left;width:100%;height:300px;position:absolute;top:0px;left:0px}
@@ -25,6 +28,16 @@
 
             }
         )
+
+        $("#strip").click(function () {
+            if (!$("#completeframe").is(":hidden")) {
+                $("#completeframe").hide();
+                $("#lightcartinfo").show();
+            } else {
+                $("#completeframe").show();
+                $("#lightcartinfo").hide();
+            }
+        })
     })
     </script>
 </head>
@@ -133,7 +146,7 @@
     </div>
 
 
- 
+
     <div class="prolistmenu mainbox">
         <ul>
             <li><a href="#" class="current">笔记本</a></li>
@@ -277,6 +290,7 @@
                 <div class="p-price" sku="1123632">
                     <span>市场价：</span>  <strong class="J-p-1123632">￥149.00</strong>
                     <span>平台价：</span>  <strong class="J-p-1123632">￥149.00</strong>
+                    <span>订购数量：<input type="text" class="p-price-num" name="name" value=" " /> </span>
                 </div>
             </li>
 
@@ -300,7 +314,7 @@
 
 
 
-   
+
 
 
 
@@ -389,5 +403,80 @@
         </div>
     </div>
 
+
+
+    <div class="addcart">
+        <div class="strip" id="strip"></div>
+
+        <div class="completeframe" id="completeframe" style="">
+
+            <table class="easyui-datagrid" style="" id="datagrid1" width="100%" title="订单时间:2014-12-7 23:20:36　　　单据编号: 2014120723192993626"
+                   data-options="
+                            singleSelect:true,
+                            collapsible:true,
+                            rownumbers:true,
+                            fitColumns:true,
+                            data:data
+                        ">
+                <thead>
+                    <tr>
+                        <th data-options="field:'productname',width:245,align:'left'">商品信息</th>
+                        <th data-options="field:'listprice',align:'right'">单价</th>
+                        <th data-options="field:'unitcost',align:'right'">数量</th>
+                        <th data-options="field:'listprice',align:'right'">实际应付款</th>
+                        <th data-options="field:'status',align:'right'">交易状态</th>
+                        <th data-options="field:'doit',align:'right'">操作</th>
+                    </tr>
+                </thead>
+            </table>
+            <script type="text/javascript">
+                var data = [
+                    { "productid": "FI-SW-01", "productname": "Koi", "unitcost": 10.00, "status": "P", "listprice": 36.50, "attr1": "Large", "itemid": "EST-1", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "K9-DL-01", "productname": "Dalmation", "unitcost": 12.00, "status": "P", "listprice": 18.50, "attr1": "Spotted Adult Female", "itemid": "EST-10", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "RP-SN-01", "productname": "Rattlesnake", "unitcost": 12.00, "status": "P", "listprice": 38.50, "attr1": "Venomless", "itemid": "EST-11", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "RP-SN-01", "productname": "Rattlesnake", "unitcost": 12.00, "status": "P", "listprice": 26.50, "attr1": "Rattleless", "itemid": "EST-12", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "RP-LI-02", "productname": "Iguana", "unitcost": 12.00, "status": "P", "listprice": 35.50, "attr1": "Green Adult", "itemid": "EST-13", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "FL-DSH-01", "productname": "Manx", "unitcost": 12.00, "status": "P", "listprice": 158.50, "attr1": "Tailless", "itemid": "EST-14", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "FL-DSH-01", "productname": "Manx", "unitcost": 12.00, "status": "P", "listprice": 83.50, "attr1": "With tail", "itemid": "EST-15", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "FL-DLH-02", "productname": "Persian", "unitcost": 12.00, "status": "P", "listprice": 23.50, "attr1": "Adult Female", "itemid": "EST-16", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "FL-DLH-02", "productname": "Persian", "unitcost": 12.00, "status": "P", "listprice": 89.50, "attr1": "Adult Male", "itemid": "EST-17", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "AV-CB-01", "productname": "Amazon Parrot", "unitcost": 92.00, "status": "P", "listprice": 63.50, "attr1": "Adult Male", "itemid": "EST-18", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" }
+                ];
+            </script>
+
+            <table style="width:100%;" class="ordertotal">
+                <tr>
+                    <td>
+                        使用金币：    订单完成后，您将获得<span class="b fred"> 0 </span>金币
+                    </td>
+                    <td style="text-align:right">共计:<span class="b fred">3</span> 件  商品总金额：<span class="b fred">￥70.00</span> - 使用金币：<span class="b fred">￥.00</span></td>
+                    <td rowspan="2" style="text-align:center">
+                        <input type="button" style="vertical-align:middle; margin-top:-3px;" value="修改">
+                        <input type="button" style="vertical-align:middle; margin-top:-3px;" value="清空">
+                    </td>
+                </tr>
+                <tr>
+                    <td>您当前的可用金币为:<span class="b fred">0 </span>金币.</td>
+                    <td style="text-align:right">= 应付款金额：<span class="b fred">￥70.00</span></td>
+
+                </tr>
+            </table>
+
+        </div>
+
+        <div class="lightcartinfo" id="lightcartinfo" style="display:none;">
+            <span class="unitext  ">
+                共计:
+                <span id="order_TotalProduct" class="b fred">￥3.00</span> 件  商品总金额：
+                <span id="order_TotalPrice" class="b fred">￥70.00</span> - 使用积分：
+                <span id="order_integral_money" class="b fred">￥.00</span> = 应付款金额：
+                <span id="order_money_paid" class="b fred">￥70.00</span> &nbsp;
+                <input type="button" style="vertical-align:middle; margin-top:-3px;" value="修改">
+                <input type="button" style="vertical-align:middle; margin-top:-3px;" value="清空">
+            </span>
+            <p class="">单据编号: <span id="OrderId">2014120723192993626</span></p>
+
+        </div>
+    </div>
 </body>
 </html>
