修改订单生成

--- a/src/main/webapp/pages/_productlist.html
+++ b/src/main/webapp/pages/_productlist.html
@@ -409,7 +409,6 @@
         <div class="strip" id="strip"></div>
 
         <div class="completeframe" id="completeframe" style="">
-
             <table class="easyui-datagrid" style="" id="datagrid1" width="100%" title="订单时间:2014-12-7 23:20:36　　　单据编号: 2014120723192993626"
                    data-options="
                             singleSelect:true,
@@ -440,6 +439,11 @@
                     { "productid": "FL-DSH-01", "productname": "Manx", "unitcost": 12.00, "status": "P", "listprice": 83.50, "attr1": "With tail", "itemid": "EST-15", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
                     { "productid": "FL-DLH-02", "productname": "Persian", "unitcost": 12.00, "status": "P", "listprice": 23.50, "attr1": "Adult Female", "itemid": "EST-16", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
                     { "productid": "FL-DLH-02", "productname": "Persian", "unitcost": 12.00, "status": "P", "listprice": 89.50, "attr1": "Adult Male", "itemid": "EST-17", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "AV-CB-01", "productname": "Amazon Parrot", "unitcost": 92.00, "status": "P", "listprice": 63.50, "attr1": "Adult Male", "itemid": "EST-18", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "AV-CB-01", "productname": "Amazon Parrot", "unitcost": 92.00, "status": "P", "listprice": 63.50, "attr1": "Adult Male", "itemid": "EST-18", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "AV-CB-01", "productname": "Amazon Parrot", "unitcost": 92.00, "status": "P", "listprice": 63.50, "attr1": "Adult Male", "itemid": "EST-18", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "AV-CB-01", "productname": "Amazon Parrot", "unitcost": 92.00, "status": "P", "listprice": 63.50, "attr1": "Adult Male", "itemid": "EST-18", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
+                    { "productid": "AV-CB-01", "productname": "Amazon Parrot", "unitcost": 92.00, "status": "P", "listprice": 63.50, "attr1": "Adult Male", "itemid": "EST-18", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" },
                     { "productid": "AV-CB-01", "productname": "Amazon Parrot", "unitcost": 92.00, "status": "P", "listprice": 63.50, "attr1": "Adult Male", "itemid": "EST-18", "otherinfo": "订单生成时间：2014-08-28:21:12:15        订单号：112347689653" }
                 ];
             </script>
