首页和页脚有点微调-wwi

--- a/src/main/webapp/pages/foot.html
+++ b/src/main/webapp/pages/foot.html
@@ -59,17 +59,14 @@
             <span>人才招聘</span>|
             <span>商家入驻</span>|
             <span>营销中心</span>|
-            <span>手机京东</span>|
             <span>友情链接</span>|
             <span>销售联盟</span>|
-            <span>京东社区</span>|
-            <span>京东公益</span>
+            <span>手机APP</span>
         </div>
         <div>
-            北京市公安局朝阳分局备案编号110105014669  |  京ICP证070359号  |  互联网药品信息服务资格证编号(京)-经营性-2014-0008  |  新出发京零 字第大120007号<br>
-            音像制品经营许可证苏宿批005号  |  出版物经营许可证编号新出发(苏)批字第N-012号  |  互联网出版许可证编号新出网证(京)字150号<br>
-            网络文化经营许可证京网文[2011]0168-061号  违法和不良信息举报电话：4006561155  Copyright © 2004-2014  京东JD.com 版权所有<br>
-            京东旗下网站：360TOP  拍拍网  网银在线<br>
+            浙江杭州市公安局备案编号110105014669  |  浙ICP证070359号  |  经营许可证 号<br>
+            网络文化经营许可证京网文[2011]0168-061号  违法和不良信息举报电话：4006561155 <br> 
+            Copyright © 2014-2014  克莱姆CLIMB 版权所有<br>
         </div>
     </div>
 </body>
